target blank fixed and about us modified

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="aboutus.html">Aboutus</a>
+                  <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
@@ -257,7 +257,7 @@
               </div>
               <div class="person-info">
                 <h3 class="full-name">Anirudh Panda</h3>
-                <span class="speciality">SEO Analyst</span>
+                <span class="speciality">SEO and Web Performance</span>
               </div>
             </div>
           </div>
@@ -359,7 +359,7 @@
           </li>
 
           <li>
-            <a href="mailto: nishikantaray1@gmail.com" target="_blank"><i class="fab fa-google-plus"
+            <a href="mailto:Studytub1@gmail.com" target="_blank"><i class="fab fa-google-plus"
                 aria-hidden="true"></i></a>
           </li>
         </ul>
