--- a/pages/1stsem.html
+++ b/pages/1stsem.html
@@ -50,7 +50,7 @@
                                             class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../aboutus.html">Aboutus</a>
+                                    <a class="nav-link" href="../aboutus.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="../contact.html">Contact</a>
@@ -98,7 +98,7 @@
 
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/MATH-1/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -113,7 +113,7 @@
 
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/MATH-2/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -127,7 +127,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/PHYSICS/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -141,7 +141,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/Chem/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -155,7 +155,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/C-PROG./"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -169,7 +169,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/Data-structure/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -183,7 +183,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/Envs/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -197,7 +197,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/BEE+BEE-LAB/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -211,7 +211,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/BE/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -225,7 +225,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/Manufacturing%20Practices/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -239,7 +239,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/Engineering%20Graphics/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -253,7 +253,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/Ci/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -267,7 +267,7 @@
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
                             <a href="https://notes.studytub.workers.dev/0:/First%20Year/mid%20term-endterm/"
-                                target="_blank">
+                                target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
