--- a/pages/3rdsemindex.html
+++ b/pages/3rdsemindex.html
@@ -47,7 +47,7 @@
                                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../aboutus.html">aboutus</a>
+                                    <a class="nav-link" href="../aboutus.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="../contact.html">Contact</a>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/Sem_3_BTech_question%20paper/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/3rd%20Sem/Sem_3_BTech_question%20paper/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -106,7 +106,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/3rdsem/3rdsemcse.html" target="_blank">
+                            <a href="/pages/3rdsem/3rdsemcse.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -120,7 +120,7 @@
                         </div>
 
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/3rdsem/3rdsemece.html" target="_blank">
+                            <a href="/pages/3rdsem/3rdsemece.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -135,7 +135,7 @@
                         
                       
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/3rdsem/3rdsemeee.html" target="_blank">
+                            <a href="/pages/3rdsem/3rdsemeee.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -148,7 +148,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/3rdsem/3rdsemeie.html" target="_blank">
+                            <a href="/pages/3rdsem/3rdsemeie.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
