--- a/pages/4thsemindex.html
+++ b/pages/4thsemindex.html
@@ -43,7 +43,7 @@
                                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../aboutus.html">Aboutus</a>
+                                    <a class="nav-link" href="../aboutus.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="../contact.html">Contact</a>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/mid-end/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/mid-end/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -96,7 +96,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/4thsem/4thsemcse.html" target="_blank">
+                            <a href="/pages/4thsem/4thsemcse.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -110,7 +110,7 @@
                         </div>
 
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/4thsem/4thsemece.html" target="_blank">
+                            <a href="/pages/4thsem/4thsemece.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -125,7 +125,7 @@
                         
                       
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/4thsem/4thsemeee.html" target="_blank">
+                            <a href="/pages/4thsem/4thsemeee.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -138,7 +138,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/EIE_4th_sem/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/4th%20Sem/EIE_4th_sem/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
