--- a/pages/6thsem/6thsemeee.html
+++ b/pages/6thsem/6thsemeee.html
@@ -43,7 +43,7 @@
                                     <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../../aboutus.html">Aboutus</a>
+                                    <a class="nav-link" href="../../aboutus.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="../../contact.html">Contact</a>
@@ -84,7 +84,7 @@
                     <div class="row">
                        
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/Advance%20PE/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/Advance%20PE/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -97,7 +97,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/Digital%20Signal%20Processing/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/Digital%20Signal%20Processing/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -110,7 +110,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/EPTD/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/EPTD/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/IOT/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/IOT/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/PYTHON/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/PYTHON/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -149,7 +149,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/os/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/os/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -162,7 +162,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/MPMC/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eee/MPMC/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -206,7 +206,7 @@
                     <u1>
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../contact.html">Contact</a></li>
-                        <li><a href="https://github.com/NishikantaRay/studytub/graphs/contributors" target="_blank">Team</a></li>
+                        <li><a href="https://github.com/NishikantaRay/studytub/graphs/contributors" target="blank">Team</a></li>
                     </u1>
                 </div>
 
@@ -233,19 +233,19 @@
 
                     <ul class="sci">
                         <li>
-                            <a href="https://github.com/NishikantaRay" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/NishikantaRay" target="blank"><i class="fab fa-github" aria-hidden="true"></i></a>
                         </li>
 
                         <li>
-                            <a href="https://twitter.com/NishikantaRay5" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/NishikantaRay5" target="blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
                         </li>
 
                         <li>
-                            <a href="https://www.linkedin.com/in/nishikanta-ray-7786a0196/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/nishikanta-ray-7786a0196/" target="blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                         </li>
 
                         <li>
-                            <a href="mailto: nishikantaray1@gmail.com" target="_blank"><i class="fab fa-google-plus"
+                            <a href="mailto: nishikantaray1@gmail.com" target="blank"><i class="fab fa-google-plus"
                                     aria-hidden="true"></i></a>
                         </li>
                     </ul>
