--- a/pages/6thsemindex.html
+++ b/pages/6thsemindex.html
@@ -43,7 +43,7 @@
                                     <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="../aboutus.html">Aboutus</a>
+                                    <a class="nav-link" href="../aboutus.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="../contact.html">Contact</a>
@@ -83,7 +83,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/mid&end/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/mid&end/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -96,7 +96,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/6thsem/6thsemece.html" target="_blank">
+                            <a href="/pages/6thsem/6thsemece.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -110,7 +110,7 @@
                         </div>
                         
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/6thsem/6thsemcse.html" target="_blank">
+                            <a href="/pages/6thsem/6thsemcse.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="/pages/6thsem/6thsemeee.html" target="_blank">
+                            <a href="/pages/6thsem/6thsemeee.html" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                         <div class="col-12 col-md-4 col-lg-4">
-                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eie/" target="_blank">
+                            <a href="https://notes.studytub.workers.dev/0:/6th%20sem/Eie/" target="blank">
                                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
 
                                     <div class="shadow thumbnail shadow-lg p-3 mb-5 bg-white rounded">
@@ -182,7 +182,7 @@
                     <u1>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../contact.html">Contact</a></li>
-                        <li><a href="https://github.com/NishikantaRay/studytub/graphs/contributors" target="_blank">Team</a></li>
+                        <li><a href="https://github.com/NishikantaRay/studytub/graphs/contributors" target="blank">Team</a></li>
                     </u1>
                 </div>
 
@@ -209,19 +209,19 @@
 
                     <ul class="sci">
                         <li>
-                            <a href="https://github.com/NishikantaRay" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/NishikantaRay" target="blank"><i class="fab fa-github" aria-hidden="true"></i></a>
                         </li>
 
                         <li>
-                            <a href="https://twitter.com/NishikantaRay5" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/NishikantaRay5" target="blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
                         </li>
 
                         <li>
-                            <a href="https://www.linkedin.com/in/nishikanta-ray-7786a0196/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/nishikanta-ray-7786a0196/" target="blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                         </li>
 
                         <li>
-                            <a href="mailto: nishikantaray1@gmail.com" target="_blank"><i class="fab fa-google-plus"
+                            <a href="mailto: nishikantaray1@gmail.com" target="blank"><i class="fab fa-google-plus"
                                     aria-hidden="true"></i></a>
                         </li>
                     </ul>
