--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,8 @@
         </div>
     </footer>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7833317136597688"
+     crossorigin="anonymous"></script>
     <script src="js/jquery/jquery-2.2.4.min.js"></script>
 
     <script src="js/popper.min.js"></script>
