--- a/pages/4thsemindex.html
+++ b/pages/4thsemindex.html
@@ -243,7 +243,8 @@
                 </p>
             </div>
         </footer>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7833317136597688"
+     crossorigin="anonymous"></script>
 
        <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
         <script src="../js/jquery/jquery-2.2.4.min.js"></script>
