--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
 
             <div class="col-12 col-md-4 col-lg-4">
-              <a href="https://notes.studytub.workers.dev/0:/7th%20sem%20/"
+              <a href="https://drive.google.com/drive/folders/1CMsv2SK1x9bdnpqwbiDjVm3ZG982KvyQ?usp=sharing"
                 target="_blank">
                 <div class="single-blog-post post-style-3 mt-50 wow fadeInUpBig" data-wow-delay="0.2s">
                   <div class="thumbnail shadow-lg p-3 mb-5 bg-white rounded">
