--- a/aboutus.html
+++ b/aboutus.html
@@ -15,28 +15,89 @@
     <meta charset="UTF-8">
     <meta name="description"
         content="Welcome to StudyTub! Let us do the hustle of finding notes for you so that you need not go anywhere else" />
-    <meta name="keywords" content="Studytub Notes Cloudflare Noteshub studytub engineeringnotes engineer engineering" />
+    <meta name="keywords" content=" <meta name="keywords" content="Mathematics notes
+    Physics notes
+    Chemistry notes
+    Mechanics notes
+    Thermodynamics notes
+    Materials science notes
+    Computer programming notes
+    Object-oriented programming notes
+    Data structures and algorithms notes
+    Database management system notes
+    Software engineering principles notes
+    Operating system notes
+    Computer networks notes
+    Digital signal processing notes
+    Control systems notes
+    Power systems notes
+    Electronic circuits notes
+    Communication systems notes
+    Microprocessors and microcontrollers notes
+    Artificial intelligence notes
+    Machine learning notes
+    Robotics notes
+    Computer graphics notes
+    Web development notes
+    Mobile app development notes
+    Internet of Things (IoT) notes
+    Cybersecurity notes
+    Data analytics notes
+    Cloud computing notes
+    Virtual reality notes
+    Augmented reality notes
+    Blockchain notes. Computer science notes
+    Electrical engineering notes
+    Mechanical engineering notes
+    Civil engineering notes
+    Electronics and communication engineering notes
+    Information technology notes
+    Software engineering notes
+    Programming tutorials
+    Code examples
+    Algorithm explanations
+    Data structure tutorials
+    Web development resources
+    App development resources
+    Machine learning tutorials
+    Artificial intelligence tutorials
+    Robotics tutorials
+    Technical interview preparation
+    Internship preparation.B.Tech notes
+    Engineering study materials
+    Free learning resources
+    Academic resources
+    Exam preparation
+    Online study platform
+    Self-learning tools
+    Technical knowledge
+    Study guides
+    Course materials
+    Digital education
+    Education technology
+    Study at home
+    E-learning platform
+    Self-paced learning
+    Exam revision materials
+    Online education
+    Distance learning resources
+    STEM education.Studytub Notes Cloudflare Noteshub studytub engineeringnotes engineer engineering" />Studytub Notes Cloudflare Noteshub studytub engineeringnotes engineer engineering" />
     <meta property="og:title" content="StudyTub" />
     <meta property="og:description"
-        content="Welcome to StudyTub! Let us do the hustle of finding notes for you so that you need not go anywhere else" />
+        content=" Study Tub offers a comprehensive collection of free notes for your Bachelor of Technology program. Get access to practical and theoretical resources based on student feedback and requests. Say goodbye to paying for premium notes – everything you need is here!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://nishikantaray.github.io/studytub/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>StudyTub</title>
+    <title>StudyTub-Your One-Stop for all the Notes</title>
     <link rel="icon" href="img/core-img/nanda.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.1/css/all.min.css" integrity="sha512-9my9Mb2+0YO+I4PUCSwUYO7sEK21Y0STBAiFEYoWtd2VzLEZZ4QARDrZ30hdM1GlioHJ8o8cWQiy8IAb1hy/Hg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta property="og:image" content="img/studytubbanner.avif" />
 </head>
 
 <body>
-
-    <!-- <div id="preloader">
-        <div class="preload-content">
-            <div id="world-load"></div>
-        </div>
-    </div> -->
     <header class="header-area">
         <div class="container">
             <div class="row">
@@ -44,7 +105,7 @@
                     <nav class="navbar navbar-expand-lg">
                         <a class="navbar-brand" href="index.html"
                             style="color: rgb(207, 207, 56); font-size: 30px; font-family: 'Times New Roman', Times, serif; padding-top: 5px;"><img
-                                src="img/core-img/nanda.webp" width="40px" height="40px" alt="Logo">StudyTub</a>
+                                src="img/core-img/nanda.webp" width="40px" height="40px" alt="Logo of studytub -your one stop solution for notes">StudyTub</a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#worldNav"
                             aria-controls="worldNav" aria-expanded="false" aria-label="Toggle navigation"><span
                                 class="navbar-toggler-icon"></span></button>
