--- a/index.html
+++ b/index.html
@@ -97,9 +97,35 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <meta property="og:image" content="img/studytubbanner.avif" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://studytub.netlify.app/",
+      "name": "StudyTub - Your One-Stop for all the Notes",
+      "description": "Welcome to StudyTub! Let us do the hustle of finding notes for you so that you need not go anywhere else",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Nishikanta Ray",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "img/core-img/nanda.webp",
+          "width": "600",
+          "height": "60"
+        }
+      },
+      "sameAs": [
+      "https://www.linkedin.com/company/study-tub/",
+        "https://github.com/NishikantaRay",
+        "https://twitter.com/NishikantaRay5",
+        "https://www.linkedin.com/in/nishikanta-ray-7786a0196/"
+      ]
+    }
+    </script>
 </head>
 
 <body>
+  
   <div id="preloader">
     <div class="preload-content">
       <!-- <div id="world-load"></div> -->
