--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "url": "https://studytub.netlify.app/",
-      "name": "StudyTub - Your One-Stop for all the Notes",
+      "name": "StudyTub",
       "description": "Welcome to StudyTub! Let us do the hustle of finding notes for you so that you need not go anywhere else",
       "publisher": {
         "@type": "Organization",
         "name": "Nishikanta Ray",
         "logo": {
           "@type": "ImageObject",
-          "url": "img/core-img/nanda.webp",
+          "url": "https://studytub.netlify.app/img/core-img/nanda.webp",
           "width": "600",
           "height": "60"
         }
@@ -121,7 +121,39 @@
         "https://www.linkedin.com/in/nishikanta-ray-7786a0196/"
       ]
     }
+
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "StudyTub-Your One-Stop for all the Notes",
+        "legalName": "StudyTub",
+        "url": "https://studytub.netlify.app/",
+        "logo": "https://studytub.netlify.app/img/core-img/nanda.webp",
+        "description": "Welcome to StudyTub! Let us do the hustle of finding notes for you so that you need not go anywhere else",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Patia, Bhubaneswar, Odisha, India",
+          "addressLocality": "Bhubaneswar",
+          "addressRegion": "Odisha",
+          "postalCode": "751024",
+          "addressCountry": "India"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+1-555-555-1212",
+          "contactType": "customer service",
+          "availableLanguage": ["English"]
+        },
+        "sameAs": [
+          "https://www.linkedin.com/company/study-tub/",
+          "https://github.com/NishikantaRay",
+          "https://twitter.com/NishikantaRay5",
+          "https://www.linkedin.com/in/nishikanta-ray-7786a0196/"
+        ]
+      }
+      </script>
 </head>
 
 <body>
