--- a/index.html
+++ b/index.html
@@ -157,7 +157,52 @@
 </head>
 
 <body>
-  
+  <div class="d-none" itemscope itemtype="https://schema.org/BreadcrumbList">
+    <ol>
+      <li itemprop="itemListElement" itemscope
+          itemtype="https://schema.org/ListItem">
+        <a itemprop="item" href="https://studytub.netlify.app/pages/1stsem.html">
+          <span itemprop="name">First Semester-StudyTub</span></a>
+        <meta itemprop="position" content="1" />
+      </li>
+      <li itemprop="itemListElement" itemscope
+          itemtype="https://schema.org/ListItem">
+        <a itemprop="item" href="https://studytub.netlify.app/pages/1stsem.html">
+          <span itemprop="name">Second Semester-StudyTub</span></a>
+        <meta itemprop="position" content="2" />
+      </li>
+      <li itemprop="itemListElement" itemscope
+          itemtype="https://schema.org/ListItem">
+        <a itemprop="item" href="https://studytub.netlify.app/pages/3rdsemindex.html">
+          <span itemprop="name">Third Semester-StudyTub</span></a>
+        <meta itemprop="position" content="3" />
+      </li>
+      <li itemprop="itemListElement" itemscope
+          itemtype="https://schema.org/ListItem">
+        <a itemprop="item" href="https://studytub.netlify.app/pages/4thsemindex.html">
+          <span itemprop="name">Fourth Semester-StudyTub</span></a>
+        <meta itemprop="position" content="4" />
+      </li>
+      <li itemprop="itemListElement" itemscope
+          itemtype="https://schema.org/ListItem">
+        <a itemprop="item" href="https://studytub.netlify.app/pages/5thsemindex.html">
+          <span itemprop="name">Fifth Semester-StudyTub</span></a>
+        <meta itemprop="position" content="5" />
+      </li>
+      <li itemprop="itemListElement" itemscope
+          itemtype="https://schema.org/ListItem">
+        <a itemprop="item" href="https://studytub.netlify.app/pages/6thsemindex.html">
+          <span itemprop="name">Sixth Semester-StudyTub</span></a>
+        <meta itemprop="position" content="6" />
+      </li>
+      <li itemprop="itemListElement" itemscope
+          itemtype="https://schema.org/ListItem">
+        <a itemprop="item" href="https://studytub.netlify.app/">
+          <span itemprop="name">Seventh Semester-StudyTub</span></a>
+        <meta itemprop="position" content="7" />
+      </li>
+    </ol>
+  </div>
   <div id="preloader">
     <div class="preload-content">
       <!-- <div id="world-load"></div> -->
